# Lynx

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/grafana-provisioning/provisioning/dashboards/: lynx.json
dashboard/src/: App.tsx  styles.css
dashboard/src/api/: client.ts
dashboard/src/components/: AnalyticsPage.tsx  ConfidenceMeter.tsx  EvidencePanel.tsx  FeedbackControls.tsx  ParticipantCard.tsx  SessionTimeline.tsx  UncertaintyBanner.tsx
dashboard/src/hooks/: useSession.ts
dashboard/src/types/: index.ts
docs/: API.md  ARCHITECTURE.md  FEEDBACK.md  PERFORMANCE.md  PLUGINS.md  PRD.md  ROBUSTNESS.md  SECURITY_AUDIT.md
lynx/: __init__.py  config.py  orchestrator.py
lynx/agents/: __init__.py  base.py  behavioral.py  face_consistency.py  llm_reasoning.py  name_matcher.py  plugin_loader.py  screen_share.py  solo_window.py  temporal.py
lynx/api/: anomaly.py  dependencies.py  main.py  metrics.py  schemas.py  ws_manager.py
lynx/api/routes/: analytics.py  analytics_summary.py  participants.py  sessions.py  ws.py
lynx/arbitrator/: __init__.py  arbitrator.py  confidence.py  weights.py
lynx/models/: __init__.py  evidence.py  participant.py  session.py  transcript.py
lynx/store/: __init__.py  memory_store.py  persistence.py
lynx/utils/: logging.py
output/: evaluation_report.json
plugins/: engagement_agent.py
prometheus/: prometheus.yml
scripts/: __init__.py  benchmark.py  evaluate.py  noise_injector.py  robustness_test.py  run_simulator.py  seed_data.py  stress_test.py
simulator/: __init__.py  main.py  scheduler.py
simulator/generators/: participants.py  speaking_patterns.py  transcript.py
simulator/scenarios/: generic_name.json  happy_path.json  interviewer_candidate_name.json  multiple_interviewers.json  name_change.json  no_solo_window.json  webcam_off.json
tests/: conftest.py
tests/fixtures/: happy_path_events.json  participants.json  transcripts.json
tests/integration/: test_api.py  test_end_to_end.py
tests/unit/: test_arbitrator.py  test_behavioral.py  test_evaluate.py  test_face_consistency.py  test_llm_reasoning.py  test_name_matcher.py  test_orchestrator.py  test_scheduler.py  test_solo_window.py  test_temporal.py  test_weights.py
