[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynx-candidate-id"
version = "0.1.0"
description = "Boilerplate scaffold for the Lynx candidate identification system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "rapidfuzz==3.13.0",
  "httpx>=0.27,<1.0",
  "structlog>=24.0,<25.0",
]

[project.scripts]
evaluate = "scripts.evaluate:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.setuptools.packages.find]
include = ["lynx*", "scripts*"]
