[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynx-candidate-id"
version = "0.1.0"
description = "Boilerplate scaffold for the Lynx candidate identification system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "rapidfuzz==3.13.0",
  "httpx>=0.27,<1.0",
  "structlog>=24.0,<25.0",
]

[project.scripts]
evaluate = "scripts.evaluate:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.setuptools.packages.find]
include = ["lynx*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG"]
ignore = ["B008", "ARG001"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
module = "mediapipe"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2"
ignore_missing_imports = true

[tool.coverage.run]
source = ["lynx"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
fail_under = 40
